[gd_scene load_steps=62 format=3 uid="uid://bxmyi1g5jjvs3"]

[ext_resource type="Script" path="res://scripts/block/block.gd" id="1_eflyf"]
[ext_resource type="PackedScene" uid="uid://cf0mams6nnmhx" path="res://scenes/block/light/block_occluder.tscn" id="2_doa3v"]
[ext_resource type="PackedScene" uid="uid://catrwka02j1g0" path="res://scenes/handler/click_area.tscn" id="3_h0fp2"]
[ext_resource type="Texture2D" uid="uid://7nk8tmq0rg35" path="res://assets/images/face_animation/scared.png" id="3_pr5jj"]
[ext_resource type="Texture2D" uid="uid://cym2u0ca0y3ve" path="res://assets/images/face_animation/fat.png" id="4_3fhqr"]
[ext_resource type="Texture2D" uid="uid://dtqqhkvtq3l2o" path="res://assets/images/spritesheet/spritesheet.png" id="5_afbxe"]
[ext_resource type="Texture2D" uid="uid://dblb1xh7ytipc" path="res://assets/images/face_animation/o_face.png" id="5_ltiqe"]
[ext_resource type="Texture2D" uid="uid://c70i3eqwhe2lt" path="res://assets/images/face_animation/poker.png" id="6_td4wk"]
[ext_resource type="Texture2D" uid="uid://betdqfksaytu1" path="res://assets/images/face_animation/sleeping.png" id="8_mafe0"]
[ext_resource type="Texture2D" uid="uid://d1sgc6ft8ejni" path="res://assets/images/particle/z.png" id="9_ortey"]
[ext_resource type="AudioStream" uid="uid://cap752scuhqfu" path="res://assets/sounds/block/select_block_2.ogg" id="12_ai6ur"]
[ext_resource type="AudioStream" uid="uid://bb2yl7fhkkfol" path="res://assets/sounds/block/select_block_3.ogg" id="13_a0xqu"]
[ext_resource type="AudioStream" uid="uid://dupcbk7m22jel" path="res://assets/sounds/block/block_slide_3.ogg" id="15_46o33"]
[ext_resource type="AudioStream" uid="uid://hucibo0h16vo" path="res://assets/sounds/block/block_slide_4.ogg" id="16_88ie2"]
[ext_resource type="AudioStream" uid="uid://c7gvqfdo7amh0" path="res://assets/sounds/block/block_slide_5.ogg" id="17_6bhma"]
[ext_resource type="AudioStream" uid="uid://ce2i6i6icuswi" path="res://assets/sounds/block/block_slide_6.ogg" id="18_mohyl"]
[ext_resource type="AudioStream" uid="uid://cxf5wc63ckjr6" path="res://assets/sounds/block/block_slide_7.ogg" id="19_lofe6"]
[ext_resource type="AudioStream" uid="uid://cbf0ppbe11vic" path="res://assets/sounds/block/block_slide_9.ogg" id="21_qqjdx"]
[ext_resource type="AudioStream" uid="uid://dxlaa4uuruyow" path="res://assets/sounds/block/block_slide_10.ogg" id="22_v3oyb"]

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_nbgqd"]
resource_local_to_scene = true
polygon = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_85r3m"]
size = Vector2(16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_s8rpv"]
atlas = ExtResource("4_3fhqr")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ed746"]
atlas = ExtResource("4_3fhqr")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_gtsvw"]
atlas = ExtResource("4_3fhqr")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_kpafa"]
atlas = ExtResource("4_3fhqr")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_c3ekv"]
atlas = ExtResource("4_3fhqr")
region = Rect2(64, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_jk1ww"]
atlas = ExtResource("4_3fhqr")
region = Rect2(80, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_g7pxc"]
atlas = ExtResource("4_3fhqr")
region = Rect2(96, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_avs8o"]
atlas = ExtResource("5_ltiqe")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_eek1y"]
atlas = ExtResource("5_ltiqe")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_bdep4"]
atlas = ExtResource("5_ltiqe")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_wepks"]
atlas = ExtResource("5_ltiqe")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_iga8t"]
atlas = ExtResource("5_ltiqe")
region = Rect2(64, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ni2ie"]
atlas = ExtResource("5_ltiqe")
region = Rect2(80, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_a5i4k"]
atlas = ExtResource("5_ltiqe")
region = Rect2(96, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_hvk4m"]
atlas = ExtResource("6_td4wk")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_uuqu3"]
atlas = ExtResource("6_td4wk")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_17yh1"]
atlas = ExtResource("6_td4wk")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_am4eh"]
atlas = ExtResource("6_td4wk")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_mrfak"]
atlas = ExtResource("6_td4wk")
region = Rect2(64, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_x2bsi"]
atlas = ExtResource("6_td4wk")
region = Rect2(80, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_b6cii"]
atlas = ExtResource("6_td4wk")
region = Rect2(96, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_cdwh2"]
atlas = ExtResource("6_td4wk")
region = Rect2(112, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_h23wx"]
atlas = ExtResource("3_pr5jj")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_7qnjp"]
atlas = ExtResource("3_pr5jj")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_8em4x"]
atlas = ExtResource("3_pr5jj")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_51p7t"]
atlas = ExtResource("3_pr5jj")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_8j2r2"]
atlas = ExtResource("3_pr5jj")
region = Rect2(64, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_o130r"]
atlas = ExtResource("3_pr5jj")
region = Rect2(80, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_7x4t8"]
atlas = ExtResource("3_pr5jj")
region = Rect2(96, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ccn38"]
atlas = ExtResource("3_pr5jj")
region = Rect2(112, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_1s353"]
atlas = ExtResource("8_mafe0")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_j4frv"]
atlas = ExtResource("8_mafe0")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ojph3"]
atlas = ExtResource("8_mafe0")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_natnx"]
atlas = ExtResource("8_mafe0")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_n3gwf"]
atlas = ExtResource("8_mafe0")
region = Rect2(64, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_luhpq"]
atlas = ExtResource("8_mafe0")
region = Rect2(80, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_ucdvl"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_s8rpv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ed746")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gtsvw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kpafa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c3ekv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jk1ww")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g7pxc")
}],
"loop": true,
"name": &"fat",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_avs8o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eek1y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bdep4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wepks")
}, {
"duration": 15.0,
"texture": SubResource("AtlasTexture_iga8t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ni2ie")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a5i4k")
}],
"loop": true,
"name": &"o_face",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hvk4m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uuqu3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_17yh1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_am4eh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mrfak")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uuqu3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x2bsi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b6cii")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cdwh2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b6cii")
}],
"loop": true,
"name": &"poker",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_h23wx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7qnjp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8em4x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_51p7t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8j2r2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o130r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7x4t8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ccn38")
}],
"loop": true,
"name": &"scared",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1s353")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j4frv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ojph3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_natnx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n3gwf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_luhpq")
}],
"loop": true,
"name": &"sleeping",
"speed": 5.0
}]

[sub_resource type="Gradient" id="Gradient_55yeh"]
offsets = PackedFloat32Array(0, 0.420732, 0.957317)
colors = PackedColorArray(0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0)

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_fl51n"]
playback_mode = 1
random_pitch = 1.1
streams_count = 2
stream_0/stream = ExtResource("12_ai6ur")
stream_1/stream = ExtResource("13_a0xqu")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_avj4k"]
random_pitch = 1.1
streams_count = 7
stream_0/stream = ExtResource("15_46o33")
stream_1/stream = ExtResource("16_88ie2")
stream_2/stream = ExtResource("17_6bhma")
stream_3/stream = ExtResource("18_mohyl")
stream_4/stream = ExtResource("19_lofe6")
stream_5/stream = ExtResource("21_qqjdx")
stream_6/stream = ExtResource("22_v3oyb")

[node name="Block" type="Area2D"]
collision_layer = 2
collision_mask = 2
script = ExtResource("1_eflyf")
is_gravity_enabled = false

[node name="BlockOccluder" parent="." instance=ExtResource("2_doa3v")]
occluder = SubResource("OccluderPolygon2D_nbgqd")

[node name="NinePatch" type="NinePatchRect" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -8.0
offset_top = -8.0
offset_right = 8.0
offset_bottom = 8.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("5_afbxe")
region_rect = Rect2(0, 80, 16, 16)
patch_margin_left = 5
patch_margin_top = 5
patch_margin_right = 5
patch_margin_bottom = 5
axis_stretch_horizontal = 1
axis_stretch_vertical = 1

[node name="CollisionShape" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_85r3m")
debug_color = Color(0, 0.509804, 0.6, 0.0509804)

[node name="UnClickArea" parent="." instance=ExtResource("3_h0fp2")]
debug_color = Color(1, 0.360784, 0.827451, 0.0313726)

[node name="ClickArea" parent="." instance=ExtResource("3_h0fp2")]
debug_color = Color(0.427451, 0.568627, 0, 0.0588235)

[node name="CenterIndicator" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_ucdvl")
animation = &"sleeping"
frame = 1
frame_progress = 0.049075

[node name="Sleep" type="Node2D" parent="."]

[node name="SleepParticles" type="CPUParticles2D" parent="Sleep"]
position = Vector2(0, -7)
amount = 2
lifetime = 1.2
preprocess = 45.28
speed_scale = 0.7
texture = ExtResource("9_ortey")
spread = 180.0
gravity = Vector2(0, -20)
initial_velocity_min = 3.5
initial_velocity_max = 3.5
scale_amount_min = 0.5
color_ramp = SubResource("Gradient_55yeh")

[node name="Audio" type="Node2D" parent="."]

[node name="ClickAudio" type="AudioStreamPlayer2D" parent="Audio"]
stream = SubResource("AudioStreamRandomizer_fl51n")
volume_db = 5.0

[node name="SlideAudio" type="AudioStreamPlayer2D" parent="Audio"]
stream = SubResource("AudioStreamRandomizer_avj4k")
volume_db = -5.0

[connection signal="clicked_outside_area" from="UnClickArea" to="." method="_on_un_click_area_clicked_outside_area"]
[connection signal="clicked" from="ClickArea" to="." method="_on_click_area_clicked"]
